--- a/ValheimVRMod/ValheimVRMod.csproj
+++ b/ValheimVRMod/ValheimVRMod.csproj
@@ -13,8 +13,8 @@
     <Deterministic>true</Deterministic>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <CommonDir>C:\Program Files (x86)\Steam\steamapps\common\</CommonDir>
-    <UnityDir>C:\Program Files (x86)\Hub\Editor\2020.3.33f1\</UnityDir>
+    <CommonDir>M:\Games\Steam\steamapps\common\</CommonDir>
+    <UnityDir>T:\Program Files\Unity\2020.3.33f1\</UnityDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
